added classpath to BuildService